--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -4,7 +4,7 @@
   min-height: 100svh;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 30px 20px;
+  padding: 24px 20px 30px;
 }
 
 .main {
